idf_component_register(SRCS "fb_to_ssd1306_pages.c" "zoom_bitmap.c" "ssd1306_send_zoomed.c" "set_page_start_addr.c" "set_col_addr.c" "clear_screen.c" "write_spi_command.c" "write_spi_data.c" "config_dev.c" "config_spi.c" 
"pin_assign.c" "main.c"
 "config_display_gpio.c" "init_ssd1306.c" "set_page_addr_mode.c"

                    INCLUDE_DIRS ".")
